k8s/ingress-path.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kubeadm-daian.confrariadocodigofonte.com
      http:
        paths:
        - path: /
          backend:
            serviceName: frontend-service
            servicePort: 80
        - path: /api
          backend:
            serviceName: backend-service
            servicePort: 3000
